welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:8: error: not found: value isAspleep
if (isAspleep==true){
    ^