welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
if (isMorning==true & isMom==false){
	return false
}
if (isMorning==true & isMom==true){
	return true 
}
if (isAspleep==true){
	return false
}
else return true 
}
